force-app/main/default/objects/GrilleBonusProjet__c/GrilleBonusProjet__c.object-meta.xml
<CustomObject>
    <description>Cet objet est utilisé pour l&apos;application automatique de la remise bonus projet pour les devis CPQ.</description>
    <label>Grille Bonus Projet</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grilles Bonus Projet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>