force-app/main/default/objects/GrilleBonusProjet__c/fields/BonusProjet__c.field-meta.xml
<CustomField>
    <fullName>BonusProjet__c</fullName>
    <description>Ce champ est utilisé pour l&apos;application automatique de la remise Bonus Projet. Il désigne le % de la remise Bonus Projet.</description>
    <label>Bonus Projet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>