force-app/main/default/objects/GrilleBonusProjet__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>Fin de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>