force-app/main/default/objects/GrilleBonusProjet__c/fields/MontantINF__c.field-meta.xml
<CustomField>
    <fullName>MontantINF__c</fullName>
    <description>Ce champ est utilisé pour l&apos;application automatique de la remise Bonus Projet.</description>
    <label>Montant inférieur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>