force-app/main/default/objects/GrilleBonusProjet__c/fields/reference__c.field-meta.xml
<CustomField>
    <fullName>reference__c</fullName>
    <externalId>true</externalId>
    <label>Référence</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>