force-app/main/default/objects/GrilleBonusProjet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BonusProjet__c</columns>
    <columns>MontantINF__c</columns>
    <columns>MontantSUP__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>